md device responsive in progress

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -211,14 +211,14 @@
             <div class="cart__wrapper">
                 <div class="cart__item_main">
                     <div class="row cart__item">
-                        <div class="col-4 col-lg-2 cart__item_img">
+                        <div class="col-4 col-md-3 col-lg-2 cart__item_img">
                             <img src="images/product-small-02.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-8 col-lg-3 cart__item_name">
+                        <div class="col-8 col-md-3 col-lg-3 cart__item_name">
                             <a href="#">white lumia 9001</a>
                             <p>sony</p>
                         </div>
-                        <div class="col-12 col-lg-5 cart__item_number">
+                        <div class="col-12 col-md-3 col-lg-5 cart__item_number">
                             <div class="handle-counter" id="handleCounter">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
@@ -229,20 +229,20 @@
                                 </p>        
                             </div>
                         </div>
-                        <div class="col-12 col-lg-2 cart__item_price">
+                        <div class="col-12 col-md-3 col-lg-2 cart__item_price">
                             <h2>$2000.00</h2>
                             <a href="#"><i class="fa-solid fa-xmark"></i></a>
                         </div>
                     </div>
                     <div class="row cart__item">
-                        <div class="col-4 col-lg-2 cart__item_img">
+                        <div class="col-4 col-md-3  col-lg-2 cart__item_img">
                             <img src="images/product-small-02.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-8 col-lg-3 cart__item_name">
+                        <div class="col-8  col-md-3 col-lg-3 cart__item_name">
                             <a href="#">white lumia 9001</a>
                             <p>sony</p>
                         </div>
-                        <div class="col-12 col-lg-5 cart__item_number">
+                        <div class="col-12 col-md-3  col-lg-5 cart__item_number">
                             <div class="handle-counter" id="handleCounter2">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
@@ -253,20 +253,20 @@
                                 </p>        
                             </div>
                         </div>
-                        <div class="col-12 col-lg-2 cart__item_price">
+                        <div class="col-12 col-md-3  col-lg-2 cart__item_price">
                             <h2>$2000.00</h2>
                             <a href="#"><i class="fa-solid fa-xmark"></i></a>
                         </div>
                     </div>
                     <div class="row cart__item">
-                        <div class="col-4 col-lg-2 cart__item_img">
+                        <div class="col-4  col-md-3 col-lg-2 cart__item_img">
                             <img src="images/product-small-02.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-8 col-lg-3 cart__item_name">
+                        <div class="col-8 col-md-3  col-lg-3 cart__item_name">
                             <a href="#">white lumia 9001</a>
                             <p>sony</p>
                         </div>
-                        <div class="col-12 col-lg-5 cart__item_number">
+                        <div class="col-12  col-md-3 col-lg-5 cart__item_number">
                             <div class="handle-counter" id="handleCounter2">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
@@ -277,20 +277,20 @@
                                 </p>        
                             </div>
                         </div>
-                        <div class="col-12 col-lg-2 cart__item_price">
+                        <div class="col-12  col-md-3 col-lg-2 cart__item_price">
                             <h2>$2000.00</h2>
                             <a href="#"><i class="fa-solid fa-xmark"></i></a>
                         </div>
                     </div>
                     <div class="row cart__item">
-                        <div class="col-4 col-lg-2 cart__item_img">
+                        <div class="col-4 col-md-3  col-lg-2 cart__item_img">
                             <img src="images/product-small-02.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-8 col-lg-3 cart__item_name">
+                        <div class="col-8 col-md-3  col-lg-3 cart__item_name">
                             <a href="#">white lumia 9001</a>
                             <p>sony</p>
                         </div>
-                        <div class="col-12 col-lg-5 cart__item_number">
+                        <div class="col-12 col-md-3  col-lg-5 cart__item_number">
                             <div class="handle-counter" id="handleCounter2">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
@@ -301,7 +301,7 @@
                                 </p>        
                             </div>
                         </div>
-                        <div class="col-12 col-lg-2 cart__item_price">
+                        <div class="col-12 col-md-3  col-lg-2 cart__item_price">
                             <h2>$2000.00</h2>
                             <a href="#"><i class="fa-solid fa-xmark"></i></a>
                         </div>
