--- a/pages/about.html
+++ b/pages/about.html
@@ -249,13 +249,13 @@
     <section id="we-do">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__detail">
+                <div class="col-12 col-sm-6  col-lg-3 we-do__detail">
                     <h4>What can we do for you ?</h4>
                     <p>
                         Donec libero dolor, tincidunt id laoreet vitae, ullamcorper eu tortor. Maecenas pellentesque, dui vitae iaculis mattis, tortor nisi faucibus magna, vitae ultrices lacus purus vitae metus.
                     </p>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6  col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Fast Delivery</h4>
                         <p>
@@ -266,7 +266,7 @@
                         <i class="fa-solid fa-truck"></i>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6  col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Support 24/7</h4>
                         <p>
@@ -277,7 +277,7 @@
                         <i class="fa-solid fa-futbol"></i>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 we-do__content">
+                <div class="col-12 col-sm-6  col-lg-3 we-do__content">
                     <div class="content__service">
                         <h4>Best Quality</h4>
                         <p>
