--- a/pages/index - 2.html
+++ b/pages/index - 2.html
@@ -579,7 +579,10 @@
             </div>
             <!-- ----------banner mobile & watch------------ -->
             <!-- -------------navs & tabs----------------- -->
-            <nav data-aos="fade-up" data-aos-delay="100">
+
+            <!-- data-aos="fade-up" data-aos-delay="100" -->
+
+            <nav >
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                   <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
                   <button class="nav-link"  id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
@@ -588,7 +591,12 @@
             </nav>
             <!-- -------------navs & tabs----------------- -->
             <!-- -------------sale content------------ -->
-            <div class="tab-content" id="nav-tabContent" data-aos="fade-up" data-aos-delay="200">
+
+
+            <!-- data-aos="fade-up" data-aos-delay="200" -->
+
+
+            <div class="tab-content" id="nav-tabContent" >
                 <!-- ---------1st content-------------- -->
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="row">
