lg device responsive

--- a/pages/index - 2.html
+++ b/pages/index - 2.html
@@ -65,10 +65,8 @@
                                 <li><a href="./checkout.html">checkout</a></li>
                                 <li><a href="./blog.html">blog</a></li>
                                 <li><a href="./wishlist.html">wishlist</a></li>
-                                <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="./faq.html">FAQ</a></li>
                                 <li><a href="./404.html">404</a></li>
-                                <li><a href="#">blog</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -955,10 +953,17 @@
 
     <section id="seller">
         <div class="container">
-            <div class="seller__heading " data-aos="fade-up" data-aos-delay="50" >
+
+            <!-- data-aos="fade-up" data-aos-delay="50" -->
+
+            <div class="seller__heading "  >
                 Best Sellers
             </div>
-            <div class="seller__wrapper" data-aos="fade-up" data-aos-delay="150">
+
+            <!-- data-aos="fade-up" data-aos-delay="150" -->
+
+
+            <div class="seller__wrapper" >
                 <div class="seller__small_content">
                     <div class="small__content_wrapper">
                         <div class="small__content">
