bottom to top btn

--- a/pages/about.html
+++ b/pages/about.html
@@ -622,6 +622,11 @@
 
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
