--- a/pages/cart.html
+++ b/pages/cart.html
@@ -265,7 +265,7 @@
                             <p>sony</p>
                         </div>
                         <div class="col-12  col-md-3 col-lg-5 cart__item_number">
-                            <div class="handle-counter" id="handleCounter2">        
+                            <div class="handle-counter" id="handleCounter3">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
                                 </p>        
@@ -289,7 +289,7 @@
                             <p>sony</p>
                         </div>
                         <div class="col-12 col-md-3  col-lg-5 cart__item_number">
-                            <div class="handle-counter" id="handleCounter2">        
+                            <div class="handle-counter" id="handleCounter4">        
                                 <p class="counter-minus btn btn-primary">
                                     <i class="fa-solid fa-minus"></i>
                                 </p>        
@@ -624,6 +624,11 @@
 
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
