--- a/pages/contact.html
+++ b/pages/contact.html
@@ -582,6 +582,11 @@
 
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
