--- a/pages/index - 2.html
+++ b/pages/index - 2.html
@@ -1617,6 +1617,11 @@
 
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
