--- a/pages/index.html
+++ b/pages/index.html
@@ -1298,6 +1298,11 @@
 
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
