--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -543,6 +543,11 @@
     <!-- ----------------------color switcher-------------------- -->
 
 
+    <!-- --------------------bottom to top---------------- -->
+    <div class="bottom_to_top">
+        <i class="fa-solid fa-angles-up"></i>
+    </div>
+    <!-- --------------------bottom to top---------------- -->
 
 
 
