--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,7 +45,7 @@
                             <a href="./blog.html">blog</a>
                         </li>
                         <li>
-                            <a href="./pages/faq.html">FAQ</a>
+                            <a href="./faq.html">FAQ</a>
                         </li>
                         <li> 
                             <a href="./contact.html">contact</a>
@@ -58,13 +58,13 @@
                                 <li><a href="./single-product.html">single product</a></li>
                                 <li><a href="./cart.html">shoping cart</a></li>
                                 <li><a href="./track.html">track</a></li>
-                                <li><a href="./register.html">register</a></li>
+                                <li><a href="./register.html">register/login</a></li>
                                 <li><a href="./contact.html">contact</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
                                 <li><a href="./checkout.html">checkout</a></li>
                                 <li><a href="./blog.html">blog</a></li>
-                                <li><a href="./wishlist.html">wishlist</a></li>                                
+                                <li><a href="./wishlist.html">wishlist</a></li>
                                 <li><a href="./faq.html">FAQ</a></li>
                                 <li><a href="./404.html">404</a></li>
                             </ul>
@@ -93,10 +93,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">register</a>
+                            <a href="./register.html">register</a>
                         </li>
                         <li>
-                            <a href="#">login</a>
+                            <a href="./register.html">login</a>
                         </li>
                     </ul>
                 </div>
