--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <li><a href="./pages/single-product.html">single product</a></li>
                                 <li><a href="./pages/cart.html">shoping cart</a></li>
                                 <li><a href="./pages/track.html">track</a></li>
-                                <li><a href="./pages/register.html">register</a></li>
+                                <li><a href="./pages/register.html">register/login</a></li>
                                 <li><a href="./pages/contact.html">contact</a></li>
                                 <li><a href="./pages/terms.html">terms & conditions</a></li>
                                 <li><a href="./pages/about.html">about us</a></li>
@@ -93,10 +93,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">register</a>
+                            <a href="./pages/register.html">register</a>
                         </li>
                         <li>
-                            <a href="#">login</a>
+                            <a href="./pages/register.html">login</a>
                         </li>
                     </ul>
                 </div>
