--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@
                 <h4>header style</h4>
             <ul >
                 <li ><a href="./index.html">home</a></li>
-                <li ><a href="./index - 2.html">home alt</a></li>
+                <li ><a href="./pages/index - 2.html">home alt</a></li>
             </ul>
             </div>
             <div class="color_inside">
