orange color added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                 <li id="blue1">blue</li>
                                 <li id="red1">red</li>
                                 <li id="navy1">navy</li>
+                                <li id="orange1">orange</li>
                             </ul>
                         </li>
                         <li>
@@ -1283,6 +1284,7 @@
                 <li id="blue">blue</li>
                 <li id="red">red</li>
                 <li id="navy">navy</li>
+                <li id="orange">orange</li>
             </ul>
             </div>
         </div>
