--- a/pages/index.html
+++ b/pages/index.html
@@ -39,6 +39,7 @@
                                 <li id="blue1">blue</li>
                                 <li id="red1">red</li>
                                 <li id="navy1">navy</li>
+                                <li id="orange1">orange</li>
                             </ul>
                         </li>
                         <li>
@@ -1268,22 +1269,23 @@
 
     <!-- ----------------------color switcher-------------------- -->
 
-    <div class="color__main group">                
+    <div class="color__main group">
         <div class="color activate">
             <div class="color_inside">
                 <h4>header style</h4>
             <ul >
                 <li ><a href="./index.html">home</a></li>
-                <li ><a href="./index - 2.html">home alt</a></li>
+                <li ><a href="./pages/index - 2.html">home alt</a></li>
             </ul>
             </div>
             <div class="color_inside">
                 <h4>colors</h4>
             <ul >
                 <li id="green">green</li>
-                <li id="blue">blue</li>                        
+                <li id="blue">blue</li>
                 <li id="red">red</li>
                 <li id="navy">navy</li>
+                <li id="orange">orange</li>
             </ul>
             </div>
         </div>
