wow animate added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- -------------bootstrap css---------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- ----------------wow css----------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- --------------------animate css----------------- -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- ------------------responsive css---------------- -->
@@ -242,7 +246,7 @@
             </div>
             <!-- --------banner menu & slider---------- -->
             <!-- ----------banner mobile & watch------------ -->
-            <div class="row">
+            <div class="row wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__mobile">
                         <h2>new life</h2>
@@ -263,11 +267,11 @@
 
             <!-- data-aos="fade-up"  data-aos-delay="100" -->
 
-            <nav  >
+            <nav data-wow-duration="2s" data-wow-delay="0.5s" class="wow fadeInUp" >
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
-                  <button class="nav-link"  id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
-                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
+                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Featured</button>
+                  <button class="nav-link"  id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">New Arrivals</button>
+                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Top Sales</button>
                 </div>
             </nav>
             <!-- -------------navs & tabs----------------- -->
@@ -276,7 +280,7 @@
             <!-- data-aos="fade-up" data-aos-delay="200" -->
 
 
-            <div class="tab-content" id="nav-tabContent" >
+            <div class="tab-content wow fadeInUp" id="nav-tabContent" data-wow-duration="2s" data-wow-delay="0.7s" >
                 <!-- ---------1st content-------------- -->
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="row">
@@ -624,7 +628,7 @@
 
     <!-- ---------------------best seller start here--------- -->
 
-    <section id="seller">
+    <section id="seller" class="wow fadeInUp " data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
             <!-- data-aos="fade-up" data-aos-delay="50" -->
@@ -789,7 +793,7 @@
 
     <!-- -------------------recently part start here--------------- -->
 
-    <section id="recent">
+    <section id="recent" class="wow fadeInUp " data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
 
@@ -937,7 +941,7 @@
 
     <!-- -------------------------brand start here-------------------- -->
 
-    <section id="brand">
+    <section id="brand" class="wow fadeInUp " data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
             <!-- data-aos="fade-up" data-aos-delay="50" -->
@@ -1241,7 +1245,7 @@
 
     <!-- ------------------------coppy start here----------------- -->
 
-    <section id="coppy">
+    <section id="coppy ">
         <div class="container">
             <div class="coppy__wrapper">
                 <div class="coppy__detail">
@@ -1343,6 +1347,11 @@
     </script>
     <!-- -------------bootstrap js---------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- ---------------wow js------------------ -->
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <!-- ----------main js--------------- -->
     <script src="./js/script.js"></script>
     <!-- ---------color------------- -->
