--- a/pages/single-product.html
+++ b/pages/single-product.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- -------------bootstrap css---------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- ----------------wow css----------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- ----------------animate css----------------- -->
+    <link rel="stylesheet" href="../css/animate.css">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- --------------responsive css--------------------- -->
@@ -686,7 +690,7 @@
 
 
         <!-- ----------------banner-alt (watch $ phone) and (navs & tabs)-------- -->
-        <div class="banner_alt__main_content">
+        <div class="banner_alt__main_content wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
             <div class="container">
             <!-- -------------navs & tabs----------------- -->
 
@@ -992,7 +996,7 @@
 
     <!-- -------------------recently part start here--------------- -->
 
-    <section id="recent">
+    <section id="recent" class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
 
@@ -1140,7 +1144,7 @@
 
     <!-- -------------------------brand start here-------------------- -->
 
-    <section id="brand">
+    <section id="brand" class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
             <!-- data-aos="fade-up" data-aos-delay="50" -->
@@ -1530,6 +1534,11 @@
     </script>
     <!-- -------------bootstrap js---------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- ---------------wow js------------------ -->
+    <script src="../js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <!-- ----------main js--------------- -->
     <script src="../js/script.js"></script>
     <!-- ---------color------------- -->
