--- a/pages/index - 2.html
+++ b/pages/index - 2.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- -------------bootstrap css---------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- ----------------wow css----------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- ----------------animate css----------------- -->
+    <link rel="stylesheet" href="../css/animate.css">
     <!-- --------main css---------------- -->
     <link rel="stylesheet" href="../css/style.css">
     <!-- ------------------responsive css-------------- -->
@@ -560,7 +564,7 @@
         <div class="banner_alt__main_content">
             <div class="container">
                 <!-- ----------banner mobile & watch------------ -->
-            <div class="row">
+            <div class="row wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s" >
                 <div class="col-12 col-md-6 col-lg-6 mobile">
                     <a href="#" class="banner__mobile">
                         <h2>new life</h2>
@@ -581,7 +585,7 @@
 
             <!-- data-aos="fade-up" data-aos-delay="100" -->
 
-            <nav >
+            <nav class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                   <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
                   <button class="nav-link"  id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
@@ -597,7 +601,7 @@
 
             <div class="tab-content" id="nav-tabContent" >
                 <!-- ---------1st content-------------- -->
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                <div class="tab-pane fade show active wow fadeInUp" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"  data-wow-duration="2s" data-wow-delay="0.7s">
                     <div class="row">
                         <div class="col-6 col-md-4 col-lg-3 sale">
                             <div class="sale__item">
@@ -952,7 +956,7 @@
 
     <!-- ---------------------best seller start here--------- -->
 
-    <section id="seller">
+    <section id="seller" class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s" >
         <div class="container">
 
             <!-- data-aos="fade-up" data-aos-delay="50" -->
@@ -1116,7 +1120,7 @@
 
     <!-- -------------------recently part start here--------------- -->
 
-    <section id="recent">
+    <section id="recent" class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
 
@@ -1263,7 +1267,7 @@
 
     <!-- -------------------------brand start here-------------------- -->
 
-    <section id="brand">
+    <section id="brand" class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
         <div class="container">
 
             <!-- data-aos="fade-up" data-aos-delay="50" -->
@@ -1668,6 +1672,11 @@
     </script>
     <!-- -------------bootstrap js---------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- ---------------wow js------------------ -->
+    <script src="../js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <!-- ----------main js--------------- -->
     <script src="../js/script.js"></script>
     <!-- ---------color------------- -->
